<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/et_border"
    >


    <RelativeLayout android:id="@+id/relativelistlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="@dimen/margin_10">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:gravity="center_vertical"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/tv_timein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_in"
        android:layout_toRightOf="@id/tv_date"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/tv_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_out"
        android:layout_toRightOf="@id/tv_date"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceListItem"
        />

</RelativeLayout>

</LinearLayout>